--- a/css/historia-1.css
+++ b/css/historia-1.css
@@ -64,3 +64,17 @@
     opacity: 1;
     transition: 1s ease-in-out;
 }
+
+#tlumaczenie-dokumentu-kazimierza-tytul{
+    color:antiquewhite; font-size: 2vw; 
+    font-weight: 600;
+    width: 100%;
+    text-align: center;
+}
+.tlumaczenie{
+    
+    
+   position: absolute;
+    top: 150% !important;
+    z-index: 6;
+}
